fix: horizontal & vertical scrollbar

--- a/src/assets/styles/objects/_viewport.scss
+++ b/src/assets/styles/objects/_viewport.scss
@@ -1,4 +1,3 @@
 .viewport-full {
-  width: 100vw;
   height: 100vh;
 }
